--- a/src/app/grid/grid.component.scss
+++ b/src/app/grid/grid.component.scss
@@ -3,13 +3,16 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: auto;
 }
 
 .container {
   display: grid;
   grid-template-columns: repeat(10, 30px);
   grid-auto-rows: 30px;
+  font-family: Arial;
+  font-size: 14px;
+  margin: 2.5em;
 }
 
 .grid::before {
@@ -27,14 +30,30 @@
 /* Just to make the grid visible */
 
 .grid > * {
-  background: rgba(0, 0, 0, 0.1);
-  border: 1px white solid;
+  // background: rgba(0, 0, 0, 0.1);
 }
 
 .grid-item {
-  border: 1px solid black;
   width: 30px;
   height: 30px;
+  text-align: center;
+  line-height: 2;
+  border-radius: 8px;
+  background: #cbcbcb;
+  margin: 1px;
+
+  // Stop Highlighting
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .start {
